1. You like the componentized solution

--- a/article/other/编写可维护代码-优化逻辑判断.md
+++ b/article/other/编写可维护代码-优化逻辑判断.md
@@ -1,4 +1,369 @@
 # 编写可维护代码-优化逻辑判断
+## JavaScript语法篇
+### 嵌套层级优化
+``` 
+function supply(fruit, quantity) {
+  const redFruits = ['apple', 'strawberry', 'cherry', 'cranberries'];
+  // 条件 1: 水果存在
+  if (fruit) {
+    // 条件 2: 属于红色水果
+    if (redFruits.includes(fruit)) {
+      console.log('红色水果');
+      // 条件 3: 水果数量大于 10 个
+      if (quantity > 10) {
+        console.log('数量大于 10 个');
+      }
+    }
+  } else {
+    throw new Error('没有水果啦!');
+  }
+}
+```
+如果提前 return 掉无效条件，将 if else的多重嵌套层次减少到一层，更容易理解和维护 
+``` 
+function supply(fruit, quantity) {
+  const redFruits = ['apple', 'strawberry', 'cherry', 'cranberries'];
+  if (!fruit) throw new Error('没有水果啦'); // 条件 1: 当 fruit 无效时，提前处理错误
+  if (!redFruits.includes(fruit)) return; // 条件 2: 当不是红色水果时，提前 return
+  
+  console.log('红色水果');
+  
+  // 条件 3: 水果数量大于 10 个
+  if (quantity > 10) {
+    console.log('数量大于 10 个');
+  }
+}
+```
+### 多条件分支的优化处理
+当需要枚举值处理不同的业务分支逻辑时
+``` 
+function pick(color) {
+  // 根据颜色选择水果
+  if(color === 'red') {
+      return ['apple', 'strawberry']; 
+  } else if (color === 'yellow') {
+      return ['banana', 'pineapple'];
+  } else if (color === 'purple') {
+      return ['grape', 'plum'];
+  } else {
+      return [];
+  }
+}
+```
+在上面的实现中：
+- if else 分支太多
+- if else 更适合于条件区间判断，而 switch case 更适合于具体枚举值的分支判断
+
+使用 switch case 优化上面的代码后：  
+``` 
+function pick(color) {
+  // 根据颜色选择水果
+  switch (color) {
+    case 'red':
+      return ['apple', 'strawberry'];
+    case 'yellow':
+      return ['banana', 'pineapple'];
+    case 'purple':
+      return ['grape', 'plum'];
+    default:
+      return [];
+  }
+}
+```
+switch case 优化之后的代码看上去格式整齐，思路很清晰，但还是很冗长。继续优化：
+- 借助 Object 的 { key: value } 结构，我们可以在 Object 中枚举所有的情况，然后将 key 作为索引，直接通过 Object.key 或者 Object[key] 来获取内容
+``` 
+const fruitColor = {
+  red: ['apple', 'strawberry'],
+  yellow: ['banana', 'pineapple'],
+  purple: ['grape', 'plum'],
+};
+function pick(color) {
+  return fruitColor[color] || [];
+}
+```
+- 使用 Map 数据结构，真正的 (key, value) 键值对结构 ；
+``` 
+const fruitColor = new Map()
+.set('red', ['apple', 'strawberry'])
+.set('yellow', ['banana', 'pineapple'])
+.set('purple', ['grape', 'plum']);
+
+function pick(color) {
+  return fruitColor.get(color) || [];
+}
+```
+为了更好的可读性，还可以通过更加语义化的方式定义对象，然后使用 Array.filter 达到同样的效果。
+``` 
+const fruits = [
+  { name: 'apple', color: 'red' }, 
+  { name: 'strawberry', color: 'red' }, 
+  { name: 'banana', color: 'yellow' }, 
+  { name: 'pineapple', color: 'yellow' }, 
+  { name: 'grape', color: 'purple' }, 
+  { name: 'plum', color: 'purple' }
+];
+
+function pick(color) {
+  return fruits.filter(f => f.color === color);
+}
+```
+### 使用数组新特性简化逻辑判断
+**多条件判断**  
+编码时遇到多个判断条件时  
+``` 
+function judge(fruit) {
+  if (fruit === 'apple' || fruit === 'strawberry' || fruit === 'cherry' || fruit === 'cranberries' ) {
+    console.log('red');
+  }
+}
+```
+当 type 未来到 10 种甚至更多时， 只能继续添加 || 来维护代码么 ?试试 Array.includes 
+``` 
+// 将判断条件抽取成一个数组
+const redFruits = ['apple', 'strawberry', 'cherry', 'cranberries'];
+function judge(fruit) {
+  if (redFruits.includes(fruit)) {
+      console.log('red');
+   }
+}
+```
+**判断数组中是否所有项都满足某条件**  
+``` 
+const fruits = [
+  { name: 'apple', color: 'red' },
+  { name: 'banana', color: 'yellow' },
+  { name: 'grape', color: 'purple' }
+];
+
+function match() {
+  let isAllRed = true;
+
+  // 判断条件：所有的水果都必须是红色
+  for (let f of fruits) {
+    if (!isAllRed) break;
+    isAllRed = (f.color === 'red');
+  }
+
+  console.log(isAllRed); // false
+}
+```
+使用 Array.every 可以很容的实现这个逻辑：
+``` 
+const fruits = [
+  { name: 'apple', color: 'red' },
+  { name: 'banana', color: 'yellow' },
+  { name: 'grape', color: 'purple' }
+];
+
+function match() {
+  // 条件：所有水果都必须是红色
+  const isAllRed = fruits.every(f => f.color === 'red');
+
+  console.log(isAllRed); // false
+}
+```
+**判断数组中是否有某一项满足条件**  
+Array.some ，它主要处理的场景是判断数组中是否有一项满足条件
+``` 
+const fruits = [
+  { name: 'apple', color: 'red' },
+  { name: 'banana', color: 'yellow' },
+  { name: 'grape', color: 'purple' }
+];
+
+// 条件：是否有红色水果 
+const isAnyRed = fruits.some(f => f.color == 'red');
+```
+### 函数默认值
+**使用解构与函数默认参数**  
+当函数参数是对象时，可以使用解构结合默认参数来简化逻辑。  
+Before:
+``` 
+const buyFruit = (fruit,amount) => {
+  fruit = fruit || {};
+  if(!fruit.name || !fruit.price){
+      return;
+  }
+  ...
+  amount = amount || 1;
+  console.log(amount)
+}
+```
+After:  
+``` 
+const buyFruit = ({ name,price }={},amount = 1) => {
+  if(!name || !prices){
+  	return;
+  }
+  console.log(amount)
+}
+```
+**复杂数据解构**  
+``` 
+const oneComplexObj = {
+  firstLevel: {
+    secondLevel: [{
+      name: '',
+      price: '',
+    }],
+  },
+};
+```
+``` 
+const {
+  firstLevel: {
+    secondLevel: [{ name, price }] = [],
+  } = {},
+} = oneComplexObj;
+```
+这里通过解构去获取对象里的值，可读性就会比较差，而且需要考虑多层解构的默认值以及数据异常情况,这种情况下，如果项目中使用 lodash 库，可以使用其中的 lodash/get 方法  
+``` 
+import lodashGet from 'lodash/get';
+
+const { name,price } = lodashGet(oneComplexObj,'firstLevel.secondLevel[0]',{});
+```
+### 策略模式优化分支逻辑处理
+策略模式：定义一系列的算法，把它们一个个封装起来， 并且使它们可相互替换。  
+使用场景：策略模式属于对象行为模式，当遇到具有相同行为接口、行为内部不同逻辑实现的实例对象时，可以采用策略模式；或者是一组对象可以根据需要动态的选择几种行为中的某一种时，也可以采用策略模式；这里以第二种情况作为示例： 
+before: 
+``` 
+const TYPE = {
+  JUICE: 'juice',
+  SALAD: 'salad',
+  JAM: 'jam',
+};
+function enjoy({ type = TYPE.JUICE, fruits }) {
+  if (!fruits || !fruits.length) {
+    console.log('请先采购水果！');
+    return;
+  }
+  if (type === TYPE.JUICE) {
+    console.log('榨果汁中...');
+    return '果汁';
+  }
+  if (type === TYPE.SALAD) {
+    console.log('做沙拉中...');
+    return '拉沙';
+  }
+  if (type === TYPE.JAM) {
+    console.log('做果酱中...');
+    return '果酱';
+  }
+}
+
+enjoy({ type: 'juice', fruits });
+```
+使用思路：定义策略对象封装不同行为、提供策略选择接口，在不同的规则时调用相应的行为。  
+``` 
+const TYPE = {
+  JUICE: 'juice',
+  SALAD: 'salad',
+  JAM: 'jam',
+};
+
+const strategies = {
+  [TYPE.JUICE](fruits) {
+    console.log('榨果汁中...');
+    return '果汁';
+  },
+  [TYPE.SALAD](fruits) {
+    console.log('做沙拉中...');
+    return '沙拉';
+  },
+  [TYPE.JAM](fruits) {
+    console.log('做果酱中...');
+    return '果酱';
+  },
+};
+
+function enjoy({ type = TYPE.JUICE, fruits }) {
+  if (!type) {
+    console.log('请直接享用！');
+    return;
+  }
+  if (!fruits || !fruits.length) {
+    console.log('请先采购水果！');
+    return;
+  }
+  return strategies[type](fruits);
+}
+
+enjoy({ type: 'juice', fruits });
+```
+## 框架之 React JSX 逻辑判断优化 
+JSX-Control-Statement是一个 Babel 插件，它扩展了 JSX 的能力，支持以标签的形式处理条件判断、循环。
+**If 标签**  
+标签内容只有在 condition 为 true 时才会渲染  
+Before:
+``` 
+{ condition() ? 'Hello World!' : null }   
+```
+After:  
+``` 
+<If condition={ condition() }>Hello World!</If>  
+```
+**Choose 标签**  
+- 标签下包括至少一个 标签、可选的 标签。  
+- 标签内容只有在 condition 为 true 时才会渲染，相当于一个 if 条件判断分支。
+- 标签则相当于最后的 else 分支。
+
+Before:  
+``` 
+{ test1 ? <span>IfBlock1</span> : test2 ? <span>IfBlock2</span> : <span>ElseBlock</span> }
+```
+After:  
+``` 
+<Choose>
+  <When condition={ test1 }>
+    <span>IfBlock1</span>
+  </When>
+  <When condition={ test2 }>
+    <span>IfBlock2</span>
+  </When>
+  <Otherwise>
+    <span>ElseBlock</span>
+  </Otherwise>
+</Choose>
+```
+**For 标签**  
+- 标签需要声明 of、each 属性
+- of 接收的是可以使用迭代器访问的对象
+- each 代表迭代器访问时的当前指向元素
+
+Before:  
+``` 
+{
+  (this.props.items || []).map(item => {
+      return <span key={ item.id }>{ item.title }</span>
+  })
+}
+
+```
+After:  
+``` 
+<For each="item" of={ this.props.items }>
+   <span key={ item.id }>{ item.title }</span>
+</For>
+```
+**With 标签**  
+Before:  
+``` 
+renderFoo = (foo) => {
+    return <span>{ foo }</span>;
+}
+
+// JSX 中表达式调用
+{
+    this.renderFoo(47)
+}
+```
+After:  
+``` 
+<With foo={ 47 }>
+  <span>{ foo }</span>
+</With>
+```
 
 参考:  
 [编写高质量可维护的代码：优化逻辑判断](https://juejin.cn/post/6859125809655840776)
