1. Learn the overall architecture of lodash source code

--- a/article/solution/有赞组件化方案.md
+++ b/article/solution/有赞组件化方案.md
@@ -203,6 +203,60 @@ UIViewController *vc = [Bifrost handleURL:kRouteShopDetail complexParams:nil com
 
 //vc进行跳转
 ```
+shopVC如下:
+``` 
+//绑定的时候, 设置的
+[Bifrost bindURL:kRouteShopDetail toHandler:^id _Nullable(NSDictionary * _Nullable parameters) {
+        
+        ShopDetailViewController *vc = [[self alloc] init];
+        if (parameters[kBifrostRouteCompletion]) {
+            BifrostRouteCompletion com = parameters[kBifrostRouteCompletion];
+            //nil就是需要传的参数, 为id类型可以自己定义
+            //com可以内部保存起来, 在需要操作的时候进行调用.
+            com(nil);
+        }
+        return vc;
+}];
+```
+## Bifrost异常处理
+使用的是hook, doesNotRecognizeSelector:函数, 进行异常的处理. 比如方法找不到之类的, 可以防止崩溃.
+## YZSTableViewModel
+对tableView的代理进行的封装, 将代理转化为函数式编程  
+- YZSTableViewModel:管理sectionModelArray
+    - YZSTableViewSectionModel:管理:cellModelArray
+        - YZSTableViewCellModel
+
+做下面这样一个操作:
+``` 
+- (YZSTableViewModel*)viewModel {
+
+    if(!_viewModel) {
+        _viewModel = [[YZSTableViewModel alloc] init];
+        self.tableView.dataSource = _viewModel;
+        self.tableView.delegate = _viewModel;
+        _viewModel.delegate = self;
+    }
+    return _viewModel;
+}
+
+- (void)reloadData {
+    [self.viewModel.sectionModelArray removeAllObjects];
+    YZSTableViewSectionModel *sectionModel = [[YZSTableViewSectionModel alloc] init];
+    //1.添加Section
+    [self.viewModel.sectionModelArray addObject:sectionModel];
+    //2.循环提添加cell
+    for (id<GoodsProtocol> goods in list) {
+        YZSTableViewCellModel *cellModel = [[YZSTableViewCellModel alloc] init];
+        [sectionModel.cellModelArray addObject:cellModel];
+        cellModel.renderBlock = ^UITableViewCell * _Nonnull(NSIndexPath * _Nonnull indexPath, UITableView * _Nonnull tableView) {
+        //相当于cell的渲染, 其他也都是设计成对应的block或者属性
+            YZStrong(self)
+            return cell;
+        };
+    }
+    [self.tableView reloadData];
+}
+```
 
 参考:  
 [有赞组件化方案](https://juejin.cn/post/7004040038480625677)
