--- a/article/frame/vue/source code study/手写优化器.md
+++ b/article/frame/vue/source code study/手写优化器.md
@@ -1,1 +1,139 @@
 # 手写优化器
+优化器的目标是找出那些静态节点并打上标记,实现原理主要分两步：  
+1. 用递归的方式将所有节点添加 static 属性，标识是不是静态节点
+2. 标记所有静态根节点
+
+静态节点指的是 DOM 不需要发生变化的节点，例如：
+```
+<p>我是静态节点，我不需要发生变化</p>
+```
+落实到AST中，静态节点指的是static属性为true的节点，例如
+```
+{
+  type:1,
+  tag:'p',
+  staticRoot:false,
+  static:true,
+  .....
+}
+
+```
+标记静态节点有两个好处：
+1. 每次重新渲染的时候不需要为静态节点创建新节点
+2. 在 Virtual DOM 中 patching 的过程可以被跳过
+
+优化器的实现原理主要分两步：
+1. 用递归的方式将所有节点添加 static 属性，标识是不是静态节点
+2. 标记所有静态根节点
+
+源码实现：
+```
+function optimize(root, options) {    
+
+    if (!root) return
+    
+    // first pass: mark all non-static nodes.
+    markStatic(root);    
+
+    // second pass: mark static roots.
+    markStaticRoots(root);
+}
+
+```
+**如何将所有节点标记 static 属性**  
+1. 先根据自身是不是静态节点做一个标记 node.static = isStatic(node)
+2. 然后在循环 children，如果 children 中出现了哪怕一个节点不是静态节点，在将当前节点的标记修改成 false： node.static = false
+
+```
+function markStatic (node) {
+  node.static = isStatic(node);
+  if (node.type === 1) {
+    for (var i = 0, l = node.children.length; i < l; i++) {
+      var child = node.children[i];
+      markStatic(child);
+      
+    }
+  }
+}
+```
+**isStatic 这个函数是如何判断静态节点**  
+```
+function isStatic (node: ASTNode): boolean {
+  if (node.type === 2) { // expression
+    return false
+  }
+  if (node.type === 3) { // text
+    return true
+  }
+  return !!(node.pre || (
+    !node.hasBindings && // no dynamic bindings
+    !node.if && !node.for && // not v-if or v-for or v-else
+    !isBuiltInTag(node.tag) && // not a built-in
+    isPlatformReservedTag(node.tag) && // not a component
+    !isDirectChildOfTemplateFor(node) &&
+    Object.keys(node).every(isStaticKey)
+  ))
+}
+```
+如果 type === 2 那肯定不是 静态节点 返回 false，如果 type === 3 那就是静态节点，返回 true。
+如果 type === 1:  
+- node.pre 为 true 直接认为当前节点是静态节点（v-pre是vue的一个指令）  
+- node.hasBindings 不能为 true。node.hasBindings 属性是在解析器转换 AST 时设置的，如果当前节点的 attrs 中，有 v-、@、:开头的 attr，就会把 node.hasBindings 设置为 true
+- 元素节点不能有 if 和 for属性。node.if 和 node.for 也是在解析器转换 AST 时设置的。
+- 并且元素节点不能是 slot 和 component。
+- 并且元素节点不能是组件。
+- 元素节点的父级节点不能是带 v-for 的 template
+- 元素节点上不能出现额外的属性(额外的属性指的是不能出现 type tag attrsList attrsMap plain parent children attrs staticClass staticStyle 这几个属性之外的其他属性，如果出现其他属性则认为当前节点不是静态节点。
+)
+
+递归是从上到下一次标记的，如果父节点被标记为静态节点，而递归到后面的过程中子节点被标记为动态节点，那么就会 有矛盾，因此需要在子节点打上标记后，重新给父节点打标记，如代码所示：  
+```
+function markStatic (node) {
+  node.static = isStatic(node);
+  if (node.type === 1) {
+    for (var i = 0, l = node.children.length; i < l; i++) {
+      var child = node.children[i];
+      markStatic(child);
+      
+      if (!child.static) {
+        node.static = false;
+      }
+    }
+  }
+}
+```
+**标记静态根节点**  
+标记静态根节点 时当判断此节点是静态根节点就不会往下走了，直接return
+```
+function markStaticRoots (node: ASTNode, isInFor: boolean) {
+  if (node.type === 1) {
+    // For a node to qualify as a static root, it should have children that
+    // are not just static text. Otherwise the cost of hoisting out will
+    // outweigh the benefits and it's better off to just always render it fresh.
+    if (node.static && node.children.length && !(
+      node.children.length === 1 &&
+      node.children[0].type === 3
+    )) {
+      node.staticRoot = true
+      return
+    } else {
+      node.staticRoot = false
+    }
+    if (node.children) {
+      for (let i = 0, l = node.children.length; i < l; i++) {
+        markStaticRoots(node.children[i], isInFor || !!node.for)
+      }
+    }
+  }
+}
+```
+有两种特殊的情况，不会被标记为静态根节点： 
+- 根节点只有一个文本节点
+- 一个没有子节点的静态节点
+
+这两种情况，优化成本大于收益。  
+当前节点是静态节点，并且有子节点，并且子节点不是单个静态文本节点这种情况会将当前节点标记为根静态节点。  
+如果发现一个节点是 静态节点，那就能证明它的所有 子节点 也都是静态节点，而我们要标记的是 静态根节点，所以如果一个静态节点只包含了一个文本节点那就不会被标记为 静态根节点。
+
+参考：  
+[学习vue源码（8）手写优化器](https://juejin.cn/post/6844904181451456525)
